# azure-kinect-video-player

./: .style.yapf  CHANGELOG.md  README.md  RELEASE.md  pyproject.toml
azure_kinect_video_player/: ffmpeg_video_writer.py  image_scaler.py  playback_wrapper.py  player.py
