[tool.poetry]
name = "azure-kinect-video-player"
version = "0.2.4"
description = ""
authors = ["Jonathan Boyle <j.n.boyle@reading.ac.uk>"]

[tool.poetry.dependencies]
python = ">=3.9"
typer = "^0.9.0"
opencv-python = "^4.9"
numpy = "^1.26.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
python-azure-kinect-player = "azure_kinect_video_player.player:app"
